--- a/ST10466018 POE part 1/Root/css/Style.css
+++ b/ST10466018 POE part 1/Root/css/Style.css
@@ -39,6 +39,12 @@ h1, h2, h3, h4 {
     text-align: center;
 }
 
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 
 a {
     color: #ff66ff; 
